chore: improve brands docs
