# src/modules/workspaces/brands/services/create-brand-address/create-brand-address.dto.ts
@@ -1,3 +1,4 @@
+import { ApiProperty } from "@nestjs/swagger";
 import { Transform, Type } from "class-transformer";
 import {
   IsArray,
@@ -10,9 +11,12 @@ import { BrazilianState } from "prisma-types/enums";
 import { BrandAddressEntityDto } from "src/domain/entities/brand.entity";
 
 export class UpsertBrandAddressResponsibleDto {
+  @ApiProperty({ required: false })
   @IsOptional()
+  @IsString()
   name!: string;
 
+  @ApiProperty({ required: false, nullable: true })
   @IsOptional()
   @IsString()
   @Transform(({ value }) => value ?? null)
@@ -20,35 +24,45 @@ export class UpsertBrandAddressResponsibleDto {
 }
 
 export class CreateBrandAddressDto {
+  @ApiProperty({ enum: BrazilianState, required: false, nullable: true })
   @IsOptional()
   @IsEnum(BrazilianState)
   state!: BrazilianState | null;
 
+  @ApiProperty({ required: false, nullable: true })
   @IsOptional()
   @IsString()
   @Transform(({ value }) => value ?? null)
   city!: string | null;
 
+  @ApiProperty({ required: false, nullable: true })
   @IsOptional()
   @IsString()
   @Transform(({ value }) => value ?? null)
   neighborhood!: string | null;
 
+  @ApiProperty({ required: false, nullable: true })
   @IsOptional()
   @IsString()
   @Transform(({ value }) => value ?? null)
   street!: string | null;
 
+  @ApiProperty({ required: false, nullable: true })
   @IsOptional()
   @IsString()
   @Transform(({ value }) => value ?? null)
   number!: string | null;
 
+  @ApiProperty({ required: false, nullable: true })
   @IsOptional()
   @IsString()
   @Transform(({ value }) => value ?? null)
   complement!: string | null;
 
+  @ApiProperty({
+    type: UpsertBrandAddressResponsibleDto,
+    isArray: true,
+  })
   @IsArray()
   @ValidateNested({ each: true })
   @Type(() => UpsertBrandAddressResponsibleDto)
